--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <h1 id="pagename">Weather station</h1>
+        <h1 id="pagename">Weather Diagnosis System</h1>
     </header>
 
     <form id="form">
